ECP-465: fixes some flaky integ tests; bumps to latest isis interim